--- a/index.html
+++ b/index.html
@@ -588,8 +588,8 @@
                     </div>
                      <!-- checkbox 4 -->
                      <div class="checkbox">
-                     <label class="input" class="checkbox__label" for="myCheckboxId_4">
-                        <input  type="checkbox" name="myCheckboxName_3" id="myCheckboxId_4" value="B2. Gold">
+                     <label class="checkbox__label" class="checkbox__label" for="myCheckboxId_4">
+                        <input class="input" type="checkbox" name="myCheckboxName_3" id="myCheckboxId_4" value="B2. Gold">
                         <div>
                         <img class="img_checkbox2" src="https://cdn.shopify.com/s/files/1/0522/1433/3633/files/buckle-4_480x480.jpg?v=1627396620"alt="">  
                         <p class="font_size_step4">B2. Gold</p>     
@@ -662,8 +662,8 @@
                     <div style="margin-left: 1%; " class="post-list3">
                          <!-- checkbox 1 -->
                          <div class="checkbox">
-                          <label class="input" class="checkbox__label" for="myCheckboxId13">
-                               <input  type="checkbox" name="myCheckboxName_4" id="myCheckboxId13" value="Gold Rose">
+                          <label class="checkbox__label" class="checkbox__label" for="myCheckboxId13">
+                               <input class="input" type="checkbox" name="myCheckboxName_4" id="myCheckboxId13" value="Gold Rose">
                                <div>
                                <img class="img_checkbox3" src="https://cdn.shopify.com/s/files/1/0522/1433/3633/files/adapter-1_480x480.jpg?v=1627399345"alt="">  
                                <p class="font_size_step4">Gold Rose</p>     
@@ -672,8 +672,8 @@
                         </div>
                           <!-- checkbox 2 -->
                         <div class="checkbox">
-                          <label class="input" class="checkbox__label" for="myCheckboxId14">
-                            <input  type="checkbox" name="myCheckboxName_4" id="myCheckboxId14" value="Black">
+                          <label class="checkbox__label" class="checkbox__label" for="myCheckboxId14">
+                            <input class="input" type="checkbox" name="myCheckboxName_4" id="myCheckboxId14" value="Black">
                             <div>
                             <img class="img_checkbox3" src="https://cdn.shopify.com/s/files/1/0522/1433/3633/files/adapter-2_480x480.jpg?v=1627399364"alt="">  
                             <p class="font_size_step4">Black</p>     
